--- a/app/views/sub_accounts/_account.html.erb
+++ b/app/views/sub_accounts/_account.html.erb
@@ -1,18 +1,18 @@
-<div class="card mb-1 shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> max-height: 130px; min-width: 140px;" 
+<div class="card mb-1 shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> max-height: 130px;" 
      <% unless current_page?(main_account_sub_account_path(main_account, sub_account)) %>
        onclick="window.location='<%= main_account_sub_account_path(main_account, sub_account) %>';"
      <% end %>>
-  <div class="card-body p-2">
+  <div class="card-body p-1">
     <div class="d-flex justify-content-between align-items-center">
-      <h5 class="card-title mb-0">
-        <%= sub_account.title.truncate(14) %>
-      </h5>
+      <h6 class="card-title mb-0">
+        <%= sub_account.title.truncate(10) %>
+      </h6>
     </div>
     <hr class="my-1">
 
     <div class="d-flex align-items-center mb-1">
       <i class="fas fa-wallet text-success me-1"></i>
-      <p class="card-text fs-5 fw-bold text-success mb-0">
+      <p class="card-text fs-6 fw-bold text-success mb-0">
         <%= number_to_currency(sub_account.balance, unit: main_account.currency) %>
       </p>
     </div>
@@ -20,7 +20,7 @@
     <% total_spent = sub_account.sub_account_transactions.sum(:amount) %>
     <div class="d-flex align-items-center mb-1">
       <i class="fas fa-money-bill-wave text-danger me-1"></i>
-      <p class="card-text fs-6 text-danger mb-0">
+      <p class="card-text fs-7 text-danger mb-0">
         <%= number_to_currency(total_spent, unit: main_account.currency) %>
       </p>
     </div>
