--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -7,6 +7,17 @@
   <% end %>
 </div>
 
+<style>
+  .alert-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .alert {
+    min-width: 300px; /* Set minimum width for alerts */
+  }
+</style>
+
 <script>
   document.addEventListener('turbo:load', function() {
     setTimeout(function() {
