--- a/app/views/main_accounts/_main_account_title.html.erb
+++ b/app/views/main_accounts/_main_account_title.html.erb
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between align-items-center mb-1">
   <div class="d-flex align-items-center">
-    <div class="dropdown me-3">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="mainAccountsDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+    <div class="dropdown me-2">
+      <button class="btn btn-info btn-sm dropdown-toggle" type="button" id="mainAccountsDropdown" data-bs-toggle="dropdown" aria-expanded="false">
         <%= @selected_main_account&.title || "No Main Account Selected" %>
         <% if @selected_main_account && @selected_main_account.owners.count > 1 %>
           (SHARED)
@@ -19,12 +19,12 @@
           </li>
         <% end %>
         <li>
-          <%= link_to "Create New Main Account", new_main_account_path, class: "dropdown-item text-primary fw-bold" %>
+          <%= link_to "Create", new_main_account_path, class: "dropdown-item text-primary" %>
         </li>
       </ul>
     </div>
     <% if @selected_main_account && @selected_main_account.balance != 0 %>
-      <%= link_to "New Income/Expense", new_main_account_main_transaction_path(@selected_main_account), class: "btn btn-outline-success btn-sm" %>
+      <%= link_to "New I/E", new_main_account_main_transaction_path(@selected_main_account), class: "btn btn-outline-success btn-sm" %>
     <% end %>
   </div>
 </div>
