--- a/app/views/main_accounts/_owner_card.html.erb
+++ b/app/views/main_accounts/_owner_card.html.erb
@@ -1,11 +1,11 @@
-<div class="card mb-2" style="min-width: 5rem; max-width: 6rem;">
+<div class="card mb-2">
   <div class="card-body p-1">
-    <h6 class="card-title mb-1 d-flex align-items-center" style="font-size: 0.9rem;">
+    <h6 class="card-title mb-1 d-flex align-items-center" style="font-size: 0.8rem;">
       <i class="fa fa-user me-1"></i>
       <% if owner == current_user %>
         You
       <% else %>
-        <%= owner.full_name.truncate(10) %>
+        <%= owner.first_name %>
       <% end %>
     </h6>
     <p class="card-text mb-0 d-flex align-items-center" style="font-size: 0.8rem;">
