--- a/app/views/pages/_cancel_account.html.erb
+++ b/app/views/pages/_cancel_account.html.erb
@@ -1,2 +1,3 @@
-<p class="text-muted">Unhappy?</p>
-<%= link_to "Cancel my account", registration_path(resource_name), data: { turbo_confirm: "Are you sure?", turbo_method: :delete }, class: "btn btn-danger" %>
+<div class="d-flex flex-column align-items-center mt-2">
+  <%= link_to "Cancel my account", registration_path(resource_name), data: { turbo_confirm: "Are you sure?", turbo_method: :delete }, class: "btn btn-danger" %>
+</div>
