--- a/app/views/sub_account_transactions/_all_transactions.html.erb
+++ b/app/views/sub_account_transactions/_all_transactions.html.erb
@@ -4,15 +4,15 @@
   </div>
 
 <% else %>
-  <div class="table-responsive">
-    <table class="table table-striped table-sm">
-      <%= render 'sub_account_transactions/all_transactions_table_head', selected_columns: selected_columns %>
-      <% transactions.each do |transaction| %>
-        <%= render 'sub_account_transactions/transaction_body', transaction: transaction, selected_columns: selected_columns %>
-      <% end %>
-      </tbody>
-    </table>
-  </div>
+<div class="table-responsive" style="min-height: 600px;">
+  <table class="table table-striped table-sm">
+    <%= render 'sub_account_transactions/all_transactions_table_head', selected_columns: selected_columns %>
+    <% transactions.each do |transaction| %>
+      <%= render 'sub_account_transactions/transaction_body', transaction: transaction, selected_columns: selected_columns %>
+    <% end %>
+    </tbody>
+  </table>
+</div>
 <% end %>
 
 <style>
