--- a/app/views/sub_account_transactions/search_sort_filter/_search_and_select.html.erb
+++ b/app/views/sub_account_transactions/search_sort_filter/_search_and_select.html.erb
@@ -6,12 +6,12 @@
     </div>
   </div>
   <div class="d-flex justify-content-between mt-2">
-    <%= link_to "Clear Search and Filters", all_sub_account_transactions_path, class: "clear btn btn-link" %>
+    <%= link_to "Clear", all_sub_account_transactions_path, class: "clear btn btn-link" %>
     <div class="dropdown">
       <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="columnDropdown" data-bs-toggle="dropdown" aria-expanded="false">
         Select Columns
       </button>
-      <ul class="dropdown-menu" aria-labelledby="columnDropdown">
+      <ul class="dropdown-menu p-2" aria-labelledby="columnDropdown">
         <li>
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="account" id="accountColumn" <%= 'checked' if @selected_columns.include?('account') %>>
