--- a/app/views/sub_accounts/_extended_account.html.erb
+++ b/app/views/sub_accounts/_extended_account.html.erb
@@ -1,4 +1,4 @@
-<div class="card shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> max-width: 400px; padding: 0;" 
+<div class="card shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> min-width: 300px; padding: 0;" 
      <% unless current_page?(main_account_sub_account_path(main_account, sub_account)) %>
        onclick="window.location='<%= main_account_sub_account_path(main_account, sub_account) %>';"
      <% end %>>
