--- a/app/views/sub_account_transactions/_all_transactions.html.erb
+++ b/app/views/sub_account_transactions/_all_transactions.html.erb
@@ -4,15 +4,16 @@
   </div>
 
 <% else %>
-<div class="table-responsive" style="min-height: 600px;">
-  <table class="table table-striped table-sm">
-    <%= render 'sub_account_transactions/all_transactions_table_head', selected_columns: selected_columns %>
-    <% transactions.each do |transaction| %>
-      <%= render 'sub_account_transactions/transaction_body', transaction: transaction, selected_columns: selected_columns %>
-    <% end %>
-    </tbody>
-  </table>
-</div>
+
+  <div class="table-responsive" style="min-height: 600px;">
+    <table class="table table-striped table-sm" style="max-width: 800px; margin: 0 auto;">
+      <%= render 'sub_account_transactions/all_transactions_table_head', selected_columns: selected_columns %>
+      <% transactions.each do |transaction| %>
+        <%= render 'sub_account_transactions/transaction_body', transaction: transaction, selected_columns: selected_columns %>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
 <% end %>
 
 <style>
@@ -27,8 +28,8 @@
 
 @media (max-width: 576px) {
   .table-sm th, .table-sm td {
-    padding: 0.1rem; /* Further reduce padding on small screens */
-    font-size: 0.75rem; /* Further reduce font size on small screens */
+    padding: 0.1rem;
+    font-size: 0.75rem;
   }
 }
 </style>
