--- a/app/views/sub_account_transactions/_transaction_body.html.erb
+++ b/app/views/sub_account_transactions/_transaction_body.html.erb
@@ -1,18 +1,18 @@
-<tr class="text-center">
+<tr class="text-left">
   <!-- Date -->
-  <td>
+  <td style="width: 80px;">
     <span class="text-muted fs-6"><%= l(transaction.created_at.to_date, format: :short) %></span>
   </td>
 
   <!-- Title -->
-  <td>
+  <td style="width: 150px;">
     <%= link_to transaction.title.truncate(10), 
                 main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), 
                 class: "fw-bold text-decoration-none fs-6" %>
   </td>
 
   <!-- Amount -->
-  <td>
+  <td style="width: 100px;">
     <span class="badge <%= transaction.transaction_kind == 'expense' ? 'bg-danger' : 'bg-success' %> fs-6">
       <%= number_to_currency(transaction.amount, unit: transaction.sub_account.main_account.currency) %>
     </span>
@@ -20,7 +20,7 @@
 
   <!-- Account -->
   <% if selected_columns.include?('account') %>
-    <td>
+    <td style="width: 150px;">
       <% account_title = transaction.sub_account.title.truncate(10) %>
       <% if !current_page?(main_account_sub_account_path(transaction.sub_account.main_account, transaction.sub_account)) %>
         <%= link_to account_title, main_account_sub_account_path(transaction.sub_account.main_account, transaction.sub_account), class: "fw-bold text-decoration-none fs-6" %>
@@ -32,24 +32,25 @@
 
   <!-- Creator -->
   <% if selected_columns.include?('creator') %>
-    <td>
+    <td style="width: 150px;">
       <span class="text-muted fs-6"><%= transaction.creator.full_name.truncate(10) %></span>
     </td>
   <% end %>
 
   <!-- Category -->
   <% if selected_columns.include?('category') %>
-    <td>
+    <td style="width: 150px;">
       <span class="text-muted fs-6"><%= transaction.category&.title&.truncate(10) %></span>
     </td>
   <% end %>
 
   <!-- Actions -->
-  <td>
+  <td style="width: 80px;">
     <div class="btn-group">
-      <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-      </button>
-      <ul class="dropdown-menu">
+      <div class="dropdown-toggle p-1" data-bs-toggle="dropdown" aria-expanded="false" style="cursor: pointer;">
+        <!-- No icon or text here -->
+      </div>
+      <ul class="dropdown-menu p-1">
         <li>
           <%= link_to new_sub_account_transaction_without_subaccount_path(
                         sub_account_transaction: { 
