--- a/app/views/sub_account_transactions/_transactions.html.erb
+++ b/app/views/sub_account_transactions/_transactions.html.erb
@@ -5,13 +5,6 @@
 
 <% else %>
   <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Title</th>
-        <th>Amount</th>
-      </tr>
-    </thead>
     <tbody>
       <% transactions.each do |transaction| %>
         <tr>
@@ -34,48 +27,50 @@
             </span>
           </td>
 
-          <!-- Actions -->
-          <td>
-            <div class="btn-group">
-              <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              </button>
-              <ul class="dropdown-menu">
-                <li>
-                  <%= link_to new_sub_account_transaction_without_subaccount_path(
-                                sub_account_transaction: { 
-                                  sub_account_id: transaction.sub_account.id,
-                                  title: transaction.title, 
-                                  amount: transaction.amount, 
-                                  transaction_kind: transaction.transaction_kind,
-                                  category_id: transaction.category_id
-                                }
-                              ), 
-                              class: "dropdown-item" do %>
-                    <i class="fas fa-redo-alt text-primary" title="Repeat Transaction with Edit"></i> New
-                  <% end %>
-                </li>
-                <li>
-                  <%= link_to repeat_without_edit_main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), 
-                              data: { turbo_method: :post }, 
-                              class: "dropdown-item" do %>
-                    <i class="fas fa-clone text-success" title="Repeat Transaction without Edit"></i> Duplicate
-                  <% end %>
-                </li>
-                <li>
-                  <%= link_to edit_main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), class: "dropdown-item" do %>
-                    <i class="fas fa-edit text-warning" title="Edit Transaction"></i> Edit
-                  <% end %>
-                </li>
-                <li>
-                  <%= link_to main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), 
-                              data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this transaction?" }, 
-                              class: "dropdown-item text-danger" do %>
-                    <i class="fas fa-trash-alt text-danger" title="Delete Transaction"></i> Delete
-                  <% end %>
-                </li>
-              </ul>
-            </div>
-          </td>
+           <!-- Actions -->
+  <td style="width: 80px;">
+    <div class="btn-group">
+      <div class="dropdown-toggle p-1" data-bs-toggle="dropdown" aria-expanded="false" style="cursor: pointer;">
+        <!-- No icon or text here -->
+      </div>
+      <ul class="dropdown-menu p-1">
+        <li>
+          <%= link_to new_sub_account_transaction_without_subaccount_path(
+                        sub_account_transaction: { 
+                          sub_account_id: transaction.sub_account.id,
+                          title: transaction.title, 
+                          amount: transaction.amount, 
+                          transaction_kind: transaction.transaction_kind,
+                          category_id: transaction.category_id
+                        }
+                      ), 
+                      class: "dropdown-item" do %>
+            <i class="fas fa-redo-alt text-primary" title="Repeat Transaction with Edit"></i> New
+          <% end %>
+        </li>
+        <li>
+          <%= link_to repeat_without_edit_main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), 
+                      data: { turbo_method: :post }, 
+                      class: "dropdown-item" do %>
+            <i class="fas fa-clone text-success" title="Repeat Transaction without Edit"></i> Duplicate
+          <% end %>
+        </li>
+        <li>
+          <%= link_to edit_main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), class: "dropdown-item" do %>
+            <i class="fas fa-edit text-warning" title="Edit Transaction"></i> Edit
+          <% end %>
+        </li>
+        <li>
+          <%= link_to main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), 
+                      data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this transaction?" }, 
+                      class: "dropdown-item text-danger" do %>
+            <i class="fas fa-trash-alt text-danger" title="Delete Transaction"></i> Delete
+          <% end %>
+        </li>
+      </ul>
+    </div>
+  </td>
+</td>
         </tr>
       <% end %>
     </tbody>
