--- a/app/views/sub_accounts/_extended_account.html.erb
+++ b/app/views/sub_accounts/_extended_account.html.erb
@@ -48,21 +48,20 @@
           <%= number_to_currency(sub_account.balance, unit: main_account.currency) %>
         </p>
 
-        <% total_spent = sub_account.sub_account_transactions.sum(:amount) %>
-        <i class="fas fa-money-bill-wave text-danger ms-4 me-2"></i>
+        <% total_spent = sub_account.sub_account_transactions.where(transaction_kind: 'expense').sum(:amount) %>        <i class="fas fa-money-bill-wave text-danger ms-4 me-2"></i>
         <p class="card-text fs-5 text-danger mb-0">
           <%= number_to_currency(total_spent, unit: main_account.currency) %>
         </p>
       </div>
+            
+      <div class="d-flex align-items-center">
+        <p class="mb-0 me-3"><i class="fas fa-percentage"></i> <%= sub_account.percentage %></p>
+        <p class="card-text mb-0">
+          <i class="fas fa-receipt"></i> <%= sub_account.sub_account_transactions.count %>
+        </p>
+      </div>
 
-       <p class="card-text mb-0">
-        <i class="fas fa-receipt"></i> <%= sub_account.sub_account_transactions.count %>
-      </p>
-
-      <p class="mb-0 me-3"><i class="fas fa-percentage"></i> <%= sub_account.percentage %></p>
-     
       <!-- Categories -->
-      Categories:
         <% sub_account.categories.each do |category| %>
           <%= link_to main_account_sub_account_category_path(main_account, sub_account, category), class: "badge bg-info text-decoration-none me-2" do %>
             <%= category.title %>
