--- a/app/views/sub_accounts/index.html.erb
+++ b/app/views/sub_accounts/index.html.erb
@@ -1,14 +1,14 @@
 <% if @sub_accounts.any? %>
   <div class="row justify-content-center">
     <% @sub_accounts.each do |sub_account| %>
-      <div class="col-6 col-sm-4 col-md-4 col-lg-2 mb-1 d-flex justify-content-center">
+      <div class="col-6 col-sm-4 col-md-4 col-lg-3 mb-1 d-flex justify-content-center">
         <%= render partial: "sub_accounts/account", locals: { sub_account: sub_account, main_account: @selected_main_account } %>
       </div>
     <% end %>
 <% end %>
 
 <% if owner_or_partner?(@selected_main_account) && @selected_main_account.available_percentage > 0 %>
-    <div class="col-6 col-sm-4 col-md-4 col-lg-2 mb-1 d-flex justify-content-center">
+    <div class="col-6 col-sm-4 col-md-4 col-lg-3 mb-1 d-flex justify-content-center">
       <%= render partial: "sub_accounts/new_account_card", locals: { main_account: @selected_main_account } %>
     </div>
   </div>
@@ -16,8 +16,7 @@
 
 <!-- Render Sub-account Transactions -->
 <div class="mt-1">
-  <% all_transactions = @sub_accounts.map(&:sub_account_transactions).flatten %>
-  <%= render partial: 'sub_account_transactions/transactions', locals: { transactions: all_transactions, main_account: @selected_main_account, title: "All Transactions" } %>
+<% all_transactions = @sub_accounts.flat_map(&:sub_account_transactions).sort_by(&:created_at).reverse %>  <%= render partial: 'sub_account_transactions/transactions', locals: { transactions: all_transactions, main_account: @selected_main_account, title: "All Transactions" } %>
 </div>
 
 <style>
