--- a/app/views/sub_accounts/_extended_account.html.erb
+++ b/app/views/sub_accounts/_extended_account.html.erb
@@ -1,79 +1,97 @@
 <div class="card shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> min-width: 300px; padding: 0;" 
      <% unless current_page?(main_account_sub_account_path(main_account, sub_account)) %>
        onclick="window.location='<%= main_account_sub_account_path(main_account, sub_account) %>';"
-     <% end %>>
+     <% end %>> 
 
-<div class="card-body p-0">
-  <div class="d-flex justify-content-between align-items-center p-3">
-    <div class="d-flex align-items-center">
-      <h5 class="card-title mb-0 me-3"><%= sub_account.title.truncate(20) %></h5>
-    </div>
-    <div class="btn-group">
-      <%= link_to new_sub_account_transaction_without_subaccount_path(sub_account_transaction: { sub_account_id: sub_account.id }), class: "btn btn-success btn-sm" do %>
-        <i class="fas fa-plus"></i>
-      <% end %>
-      <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-        <i class="fas fa-cog"></i>
-      </button>
-      <ul class="dropdown-menu">
-        <li>
-          <%= link_to main_account_sub_account_categories_path(main_account, sub_account), class: "dropdown-item" do %>
-            <i class="fas fa-tags"></i> Categories
-          <% end %>
-        </li>
-        <li>
-          <%= link_to edit_main_account_sub_account_path(main_account, sub_account), class: "dropdown-item" do %>
-            <i class="fas fa-edit"></i> Edit
-          <% end %>
-        </li>
-        <li>
-          <%= link_to main_account_sub_account_path(main_account, sub_account),
-                      data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this Account?" },
-                      class: "dropdown-item text-danger" do %>
-            <i class="fas fa-trash-alt"></i> Delete
-          <% end %>
-        </li>
-      </ul>
+  <div class="card-body p-0">
+    <div class="d-flex justify-content-between align-items-center p-3">
+      <div class="d-flex align-items-center">
+        <h5 class="card-title mb-0 me-3"><%= sub_account.title.truncate(20) %></h5>
+      </div>
+      <div class="btn-group">
+        <%= link_to new_sub_account_transaction_without_subaccount_path(sub_account_transaction: { sub_account_id: sub_account.id }), class: "btn btn-success btn-sm" do %>
+          <i class="fas fa-plus"></i>
+        <% end %>
+        <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="fas fa-cog"></i>
+        </button>
+        <ul class="dropdown-menu">
+          <li>
+            <%= link_to main_account_sub_account_categories_path(main_account, sub_account), class: "dropdown-item" do %>
+              <i class="fas fa-tags"></i> Categories
+            <% end %>
+          </li>
+          <li>
+            <%= link_to edit_main_account_sub_account_path(main_account, sub_account), class: "dropdown-item" do %>
+              <i class="fas fa-edit"></i> Edit
+            <% end %>
+          </li>
+          <li>
+            <%= link_to main_account_sub_account_path(main_account, sub_account),
+                        data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this Account?" },
+                        class: "dropdown-item text-danger" do %>
+              <i class="fas fa-trash-alt"></i> Delete
+            <% end %>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
-
-    <hr class="m-0">
-    <div class="p-3">
-
-      <div class="d-flex align-items-center">
+  <hr class="m-0">
+  
+  <div class="p-3">
+    <div class="row">
+      <!-- Account Balance -->
+      <div class="col-6 d-flex align-items-center">
         <i class="fas fa-wallet text-success me-2"></i>
         <p class="card-text fs-3 fw-bold text-success mb-0">
           <%= number_to_currency(sub_account.balance, unit: main_account.currency) %>
         </p>
+      </div>
 
-        <% total_spent = sub_account.sub_account_transactions.where(transaction_kind: 'expense').sum(:amount) %>        <i class="fas fa-money-bill-wave text-danger ms-4 me-2"></i>
+      <!-- Total Spent -->
+      <div class="col-6 d-flex align-items-center justify-content-end">
+        <i class="fas fa-money-bill-wave text-danger me-2"></i>
         <p class="card-text fs-5 text-danger mb-0">
-          <%= number_to_currency(total_spent, unit: main_account.currency) %>
+          <%= number_to_currency(@total_spent, unit: @selected_main_account.currency) %>
         </p>
       </div>
-            
-      <div class="d-flex align-items-center">
+    </div>
+
+    <div class="row mt-2">
+      <!-- Percentage and number of Transactions -->
+      <div class="col-6 d-flex align-items-center">
         <p class="mb-0 me-3"><i class="fas fa-percentage"></i> <%= sub_account.percentage %></p>
         <p class="card-text mb-0">
           <i class="fas fa-receipt"></i> <%= sub_account.sub_account_transactions.count %>
         </p>
       </div>
 
-      <!-- Categories -->
-        <% sub_account.categories.each do |category| %>
-          <%= link_to main_account_sub_account_category_path(main_account, sub_account, category), class: "badge bg-info text-decoration-none me-2" do %>
-            <%= category.title %>
-          <% end %>
+      <!-- Dropdown for Total Spent Period -->
+      <div class="col-6 d-flex align-items-center justify-content-end">
+        <%= form_with url: update_total_spent_period_main_account_sub_account_path(main_account, sub_account), method: :post, local: true, class: "ms-3" do %>
+          <div class="form-group">
+            <%= select_tag :total_spent_period, options_for_select([['This month', 'month'], ['All', 'all']], @total_spent_period), class: "form-select form-select-sm", onchange: "this.form.submit();" %>
+          </div>
         <% end %>
- 
+      </div>
+    </div>
 
-      <% if sub_account.description.present? %>
-        <p class="card-text text-muted small">
-          <%= sub_account.description %>
-        </p>
+    <!-- Categories -->
+    <div class="mt-2">
+      <% sub_account.categories.each do |category| %>
+        <%= link_to main_account_sub_account_category_path(main_account, sub_account, category), class: "badge bg-info text-decoration-none me-2" do %>
+          <%= category.title %>
+        <% end %>
       <% end %>
     </div>
+
+    <!-- Description -->
+    <% if sub_account.description.present? %>
+      <p class="card-text text-muted small mt-2">
+        <%= sub_account.description %>
+      </p>
+    <% end %>
   </div>
 </div>
