adjust sort and filter layout and add favicon

--- a/app/views/sub_account_transactions/_form.html.erb
+++ b/app/views/sub_account_transactions/_form.html.erb
@@ -18,7 +18,7 @@
     <!-- Title -->
     <div class="col-6">
       <%= form.label :title, "Title", class: "form-label" %>
-      <%= form.text_field :title, class: "form-control", placeholder: "Enter transaction title", autofocus: true %>
+      <%= form.text_field :title, class: "form-control", placeholder: "Enter transaction title" %>
     </div>
 
     <!-- Amount -->
