--- a/app/views/sub_account_transactions/all.html.erb
+++ b/app/views/sub_account_transactions/all.html.erb
@@ -1,9 +1,5 @@
-<% if @transactions.any? %>
-  <%= render 'sub_account_transactions/search_sort_filter/search_and_select' %>
-<% end %>
-
-<% sorted_transactions = @transactions.sort_by(&:created_at).reverse %>
-<%= render partial: 'sub_account_transactions/all_transactions', locals: { transactions: sorted_transactions, main_account: @selected_main_account, title: "All Transactions", selected_columns: @selected_columns } %>
+<%= render 'sub_account_transactions/search_sort_filter/search_and_filter', selected_columns: @selected_columns %>
+<%= render partial: 'sub_account_transactions/all_transactions', locals: { transactions: @transactions, main_account: @selected_main_account, title: "All Transactions", selected_columns: @selected_columns } %>
 
 <style>
     .table th a {
