--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "Ncct App V2" %></title>
+    <title><%= content_for(:title) || "NCCT" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -10,12 +10,14 @@
 
     <%= yield :head %>
 
+    <link rel="icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
+    <link rel="icon" href="<%= asset_path('icon.png') %>" type="image/png">
+    # <link rel="icon" href="<%= asset_path('icon.svg') %>" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="<%= asset_path('icon.png') %>">
+
+
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
     <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
-
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
@@ -23,7 +25,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>  
     <%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css", media: "all" %>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-
+    <%= favicon_link_tag asset_path('favicon.ico') %>  
   </head>
 
   <body>
