--- a/app/views/sub_accounts/_form.html.erb
+++ b/app/views/sub_accounts/_form.html.erb
@@ -27,10 +27,10 @@
         id="percentage-slider"
         type="range"
         class="form-range me-3"
-        min="0"
+        min="1"
         max="<%= @max_percentage %>"
         step="1"
-        value="<%= sub_account.percentage || 0 %>"
+        value="<%= sub_account.percentage.present? ? sub_account.percentage.to_i : 1 %>"
         oninput="document.getElementById('percentage-value').value = this.value"
         name="sub_account[percentage]"
       >
@@ -39,15 +39,15 @@
         type="number"
         class="form-control"
         style="width: 100px;"
-        min="0"
+        min="1"
         max="<%= @max_percentage %>"
         step="1"
-        value="<%= sub_account.percentage || 0 %>"
+        value="<%= sub_account.percentage.present? ? sub_account.percentage.to_i : 1 %>"
         oninput="document.getElementById('percentage-slider').value = this.value"
       >
       <span class="ms-2">%</span>
     </div>
-    <small class="text-muted">Select a percentage between 0% and <%= @max_percentage %>%.</small>
+    <small class="text-muted">Select a percentage between 1% and <%= @max_percentage %>%.</small>
   </div>
 
   <div class="d-flex justify-content-between">
